fix: ajustando font size e gap para texto de pergunta em componente FAQ

--- a/src/components/faq/Faq.module.css
+++ b/src/components/faq/Faq.module.css
@@ -139,12 +139,12 @@
     padding: 15px;
   }
 
-  .questionContent {
-    gap: 10px;
+  .questionText {
+    font-size: 1.6rem;
   }
 
-  .questionText {
-    font-size: 1rem;
+  .questionContent {
+    gap: 10px;
   }
 
   .plus {
